--- a/Assignment4/Assignment4/Views/Shared/_Layout.cshtml
+++ b/Assignment4/Assignment4/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="GoodSites">Good Sites</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="BadSites">Bad Sites</a></li>
                 </ul>
             </div>
         </div>
