A8 more starting work

--- a/Assignment8/Assignment8/Views/Shared/_Layout.cshtml
+++ b/Assignment8/Assignment8/Views/Shared/_Layout.cshtml
@@ -31,8 +31,15 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Announcements">Announcements</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Products">Products</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Customers">Customers</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Inventory">Inventory</a></li>
+                    @if (User.IsInRole("Admin"))
+                    {
+
+                    }
+
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
