--- a/Assignment8/Assignment8/Views/Announcements/Create.cshtml
+++ b/Assignment8/Assignment8/Views/Announcements/Create.cshtml
@@ -13,13 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AnnouncementTitle" class="control-label"></label>
+                <label asp-for="AnnouncementTitle" class="control-label">Announcement Title</label>
                 <input asp-for="AnnouncementTitle" class="form-control" />
                 <span asp-validation-for="AnnouncementTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AnnouncementContent" class="control-label"></label>
-                <input asp-for="AnnouncementContent" class="form-control" />
+                <label asp-for="AnnouncementContent" class="control-label">Announcement Content</label>
+                <!--<input asp-for="AnnouncementContent" class="form-control" /> -->
+                <textarea asp-for="AnnouncementContent" class="form-control" rows="12"></textarea>
                 <span asp-validation-for="AnnouncementContent" class="text-danger"></span>
             </div>
             <div class="form-group">
