--- a/Assignment8/Assignment8/Views/Announcements/Index.cshtml
+++ b/Assignment8/Assignment8/Views/Announcements/Index.cshtml
@@ -12,30 +12,38 @@
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.AnnouncementTitle)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AnnouncementContent)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AnnouncementTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AnnouncementContent)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AnnouncementId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AnnouncementId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AnnouncementId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            <th>
+                <!-- @Html.DisplayNameFor(model => model.AnnouncementTitle)
+    -->
+                Announcement Title
+            </th>
+            <th>
+                <!--   @Html.DisplayNameFor(model => model.AnnouncementContent)
+    -->
+                Announcement Content
+            </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model.Reverse()) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AnnouncementTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AnnouncementContent)
+                </td>
+                @if (User.IsInRole("Admin"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.AnnouncementId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.AnnouncementId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.AnnouncementId">Delete</a>
+                    </td>
+                }
+
+            </tr>
+    }
+        </tbody>
+    </table>
