--- a/Assignment8/Assignment8/Views/Shared/_Layout.cshtml
+++ b/Assignment8/Assignment8/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="announcements" asp-action="Index">Announcements</a></li>
                     <li><a asp-area="" asp-controller="products" asp-action="Index">Products</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Customers">Customers</a></li>
+                    <li><a asp-area="" asp-controller="Manage" asp-action="Index">Customers</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Inventory">Inventory</a></li>
                     @if (User.IsInRole("Admin"))
                     {
