Final push for a8

--- a/Assignment8/Assignment8/Views/Announcements/Index.cshtml
+++ b/Assignment8/Assignment8/Views/Announcements/Index.cshtml
@@ -1,49 +1,53 @@
 ﻿@model IEnumerable<Assignment8.Models.Announcement>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Announcements";
 }
 
-<h2>Index</h2>
+<h2>Announcements</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <!-- @Html.DisplayNameFor(model => model.AnnouncementTitle)
-    -->
-                Announcement Title
-            </th>
-            <th>
-                <!--   @Html.DisplayNameFor(model => model.AnnouncementContent)
-    -->
-                Announcement Content
-            </th>
+@if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    <!-- @Html.DisplayNameFor(model => model.AnnouncementTitle)
+                    -->
+                    Announcement Title
+                </th>
+                <th>
+                    <!--   @Html.DisplayNameFor(model => model.AnnouncementContent)
+                    -->
+                    Announcement Content
+                </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-    @foreach (var item in Model.Reverse()) {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AnnouncementTitle)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AnnouncementContent)
-                </td>
-                @if (User.IsInRole("Admin"))
-                {
+            @foreach (var item in Model.Reverse())
+            {
+                <tr>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.AnnouncementId">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.AnnouncementId">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.AnnouncementId">Delete</a>
+                        @Html.DisplayFor(modelItem => item.AnnouncementTitle)
                     </td>
-                }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AnnouncementContent)
+                    </td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.AnnouncementId">Edit</a> |
+                            <a asp-action="Details" asp-route-id="@item.AnnouncementId">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.AnnouncementId">Delete</a>
+                        </td>
+                    }
 
-            </tr>
-    }
+                </tr>
+            }
         </tbody>
     </table>
