--- a/Assignment8/Assignment8/Views/Products/Details.cshtml
+++ b/Assignment8/Assignment8/Views/Products/Details.cshtml
@@ -31,6 +31,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
+    @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a>
+}
+
     <a asp-action="Index">Back to List</a>
 </div>
