--- a/Assignment8/Assignment8/Views/Home/Index.cshtml
+++ b/Assignment8/Assignment8/Views/Home/Index.cshtml
@@ -68,10 +68,10 @@
 <div class="row">
     <div class="col-md-6">
         <h2>View Announcements</h2>
-
+        <a asp-area="" asp-controller="announcements" asp-action="Index">Click Here</a>
     </div>
     <div class="col-md-6">
         <h2>View Products</h2>
-
+        <a asp-area="" asp-controller="products" asp-action="Index">Click Here</a>
     </div>
 </div>
